fix z-index

--- a/project/greetings/style.css
+++ b/project/greetings/style.css
@@ -226,7 +226,7 @@ main ul li:last-child:after {
   width: 30px;
   height: 4px;
   background: #fff;
-  z-index: 3;
+  z-index: 10002;
   cursor: pointer;
 }
 
@@ -298,7 +298,7 @@ footer a:hover {
     top: 0;
     left: 0;
     position: fixed;
-    z-index: 2;
+    z-index: 10000;
   }
 
   header h1 {
@@ -328,7 +328,7 @@ footer a:hover {
     left: -90%;
     border-radius: 0;
     background: #333;
-    z-index: 99999;
+    z-index: 10001;
     color: #fff;
   }
 
